--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ test = true
 anyhow = "1.0.43"
 assert_cmd = "2.0.0"
 chashmap = "2.2.2"
+chrono = "0.4"
 clap = "=3.0.0-beta.5"
 color-eyre = "0.5.11"
 concolor-control = { version = "0.0.7", features = ["auto"] }
@@ -115,10 +116,14 @@ rayon = "1.5.1"
 regex = "1.5.4"
 rusqlite = { version = "0.25.3", features = ["bundled"] }
 tempfile = "3.2.0"
+textwrap = "0.14.2"
 tracing = "0.1.26"
 tracing-chrome = "0.3.1"
 tracing-error = "0.1.2"
 tracing-subscriber = "0.2.20"
+
+[target.'cfg(unix)'.dependencies]
+skim = "0.9.4"
 
 [build-dependencies]
 clap = "=3.0.0-beta.5"
@@ -128,3 +133,5 @@ man = "0.3.0"
 clippy = "0.0.302"
 criterion = { version = "0.3.5", features = ["html_reports"] }
 insta = "1.7.2"
+portable-pty = "0.5.0"
+vt100 = "0.12.0"
