--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -85,10 +85,12 @@ jobs:
         timeout-minutes: 5
         run: |
           export PATH_TO_GIT="$PWD"/git
-          cargo test --all-features
+          # https://github.com/actions/runner/issues/241#issuecomment-577360161
+          script -e -c cargo test --all-features
 
       - name: Run Rust tests (no default features)
         timeout-minutes: 5
         run: |
           export PATH_TO_GIT="$PWD"/git
-          cargo test --no-default-features
+          # https://github.com/actions/runner/issues/241#issuecomment-577360161
+          script -e -c cargo test --no-default-features
