Containerize test step

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -52,7 +52,7 @@ jobs:
           if-no-files-found: error
 
   run-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: build-git
 
     strategy:
@@ -82,15 +82,15 @@ jobs:
         run: cargo build --benches --tests
 
       - name: Run Rust tests (all features)
-        timeout-minutes: 5
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          export PATH_TO_GIT="$PWD"/git
-          cargo test --all-features
+        timeout-minutes: 10
+        uses: docker://rust:buster
+        with:
+          entrypoint: /bin/bash
+          args: -c "PATH_TO_GIT=\"$PWD/git\" cargo test --all-features"
 
       - name: Run Rust tests (no default features)
-        timeout-minutes: 5
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          export PATH_TO_GIT="$PWD"/git
-          cargo test --no-default-features
+        timeout-minutes: 10
+        uses: docker://rust:buster
+        with:
+          entrypoint: /bin/bash
+          args: -c "PATH_TO_GIT=\"$PWD/git\" cargo test --no-default-features"
