--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -80,13 +80,15 @@ jobs:
 
       - name: Compile
         run: cargo build --benches --tests
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
-      - name: Run Rust tests (all features)
-        run: |
-          export PATH_TO_GIT="$PWD"/git
-          cargo test --all-features
+      # - name: Run Rust tests (all features)
+      #   run: |
+      #     export PATH_TO_GIT="$PWD"/git
+      #     cargo test --all-features
 
-      - name: Run Rust tests (no default features)
-        run: |
-          export PATH_TO_GIT="$PWD"/git
-          cargo test --no-default-features
+      # - name: Run Rust tests (no default features)
+      #   run: |
+      #     export PATH_TO_GIT="$PWD"/git
+      #     cargo test --no-default-features
